--- a/HITSW/HITSW/Content/Site.css
+++ b/HITSW/HITSW/Content/Site.css
@@ -94,8 +94,8 @@ h5, h6 {
 /* main layout
 ----------------------------------------------------------*/
 .content-wrapper {
-    margin: 0 auto;
-    max-width: 960px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 #body {
