--- a/HITSW/HITSW/Views/Shared/_Layout.cshtml
+++ b/HITSW/HITSW/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                                 <li>@Html.ActionLink("Organization", "Index", "AddrBkOrganizationUnit")</li>
                                 <li>@Html.ActionLink("Person", "Index", "AddrBkPerson")</li>
+                                <li>@Html.ActionLink("Geographical Group", "Index", "AddrBkGeographicalGroup")</li>
                             </ul>
                           </li>
                       </ul>
