--- a/HITSW/HITSW/Views/AddrBkRelation/_CreateOrg.cshtml
+++ b/HITSW/HITSW/Views/AddrBkRelation/_CreateOrg.cshtml
@@ -28,7 +28,7 @@
 
     <table class="table table-striped">
         <tr>
-            <td>Organization</td>
+            <td>Organization *</td>
             <td>
                 @Html.DropDownList("RelatedOrgID", String.Empty)
                 @Html.ValidationMessageFor(model => model.RelatedOrgID)
@@ -36,7 +36,7 @@
         </tr>
 
         <tr>
-            <td>Relation Type</td>
+            <td>Relation Type *</td>
             <td>
                 @Html.DropDownList("RelnToPrimaryOrg_LCID", String.Empty)
                 @Html.ValidationMessageFor(model => model.RelnToPrimaryOrg_LCID)
