Working on city/town of geographical group

--- a/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_CreateState.cshtml
+++ b/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_CreateState.cshtml
@@ -44,6 +44,7 @@
 
     <input type="hidden" name="orgName" value="@ViewBag.orgName" />
     <input type="hidden" name="organizationId" value="@ViewBag.organizationId" />
+    <input type="hidden" name="basis" value="@ViewBag.basis" />
 
     <table class="table table-striped">
         <tr>
