--- a/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_CreateContinent.cshtml
+++ b/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_CreateContinent.cshtml
@@ -24,6 +24,7 @@
 
     <input type="hidden" name="orgName" value="@ViewBag.orgName" />
     <input type="hidden" name="organizationId" value="@ViewBag.organizationId" />
+    <input type="hidden" name="basis" value="@ViewBag.basis" />
 
     <table class="table table-striped">
         <tr>
