--- a/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_EditCountry.cshtml
+++ b/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_EditCountry.cshtml
@@ -24,6 +24,7 @@
 
     <input type="hidden" name="orgName" value="@ViewBag.orgName" />
     <input type="hidden" name="organizationId" value="@ViewBag.organizationId" />
+    <input type="hidden" name="basis" value="@ViewBag.basis" />
     
     @Html.HiddenFor(model => model.Id)
     @Html.HiddenFor(model => model.GeographicalGroup_LCID)
