--- a/HITSW/HITSW/Views/AddrBkIdentification/_EditIndv.cshtml
+++ b/HITSW/HITSW/Views/AddrBkIdentification/_EditIndv.cshtml
@@ -48,7 +48,7 @@
 
     <table class="table table-striped">
         <tr>
-            <td>Identification Type</td>
+            <td>Identification Type *</td>
             <td>
                 @Html.DropDownList("IdentType_LCID", String.Empty)
                 @Html.ValidationMessageFor(model => model.IdentType_LCID)
@@ -88,7 +88,7 @@
         </tr>
 
         <tr>
-            <td>Issuer *</td>
+            <td>Issuer</td>
             <td>
                 @Html.DropDownList("IdentificationIssuerID", String.Empty)
                 @Html.ValidationMessageFor(model => model.IdentificationIssuerID)
