--- a/HITSW/HITSW/Views/AddrBkIdentification/_EditOrg.cshtml
+++ b/HITSW/HITSW/Views/AddrBkIdentification/_EditOrg.cshtml
@@ -51,7 +51,7 @@
 
     <table class="table table-striped">
         <tr>
-            <td>Identification Type</td>
+            <td>Identification Type *</td>
             <td>
                 @Html.DropDownList("IdentType_LCID", String.Empty)
                 @Html.ValidationMessageFor(model => model.IdentType_LCID)
@@ -67,7 +67,7 @@
         </tr>
 
         <tr>
-            <td>Issuer *</td>
+            <td>Issuer</td>
             <td>
                 @Html.DropDownList("IdentificationIssuerID", String.Empty)
                 @Html.ValidationMessageFor(model => model.IdentificationIssuerID)
