Adding city on geographical group

--- a/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_MembersCity.cshtml
+++ b/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_MembersCity.cshtml
@@ -43,10 +43,10 @@
             @Html.DisplayFor(modelItem => item.AddrBk_GeographicalGroup.Title)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.AddrBk_StateOrProvinceLocality.Lookup_Country.Title)
+            @Html.DisplayFor(modelItem => item.Lookup_Country.Title)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.AddrBk_StateOrProvinceLocality.Lookup_StateProvince.Title)
+            @Html.DisplayFor(modelItem => item.Lookup_StateProvince.Title)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.AddrBk_StateOrProvinceLocality.Title)
