--- a/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_Index.cshtml
+++ b/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_Index.cshtml
@@ -36,6 +36,14 @@
     {
         @Html.Partial("_MembersCity", Model)
     }
+    else if (ViewBag.basis == "County")
+    {
+        @Html.Partial("_MembersCounty", Model)
+    }
+    else if (ViewBag.basis == "Municipality")
+    {
+        @Html.Partial("_MembersMuncipality", Model)
+    }
 }
 else
 {
