Finish adding street address on geographical group

--- a/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_Index.cshtml
+++ b/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_Index.cshtml
@@ -44,6 +44,10 @@
     {
         @Html.Partial("_MembersMuncipality", Model)
     }
+    else if (ViewBag.basis == "Street Address")
+    {
+        @Html.Partial("_MembersStreet", Model)
+    }
 }
 else
 {
