--- a/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_Index.cshtml
+++ b/HITSW/HITSW/Views/AddrBkGeographicalGroupMember/_Index.cshtml
@@ -44,7 +44,7 @@
     {
         @Html.Partial("_MembersMuncipality", Model)
     }
-    else if (ViewBag.basis == "Street Address")
+    else
     {
         @Html.Partial("_MembersStreet", Model)
     }
