--- a/HITSW/HITSW/Views/AddrBkVeteran/_Index.cshtml
+++ b/HITSW/HITSW/Views/AddrBkVeteran/_Index.cshtml
@@ -11,16 +11,26 @@
 <div style="text-align:right">
     <a class="btn btn-info" href="#" onclick="fillMenu('@Url.Action("Create", new { orgName=ViewBag.orgName,organizationId=ViewBag.organizationId})','#addrbk_organization_details_content')">New</a>
 </div>
+<br />
 
-@if(ViewBag.resultCount > 0) {
-
-    <form id="addrbk_veteran_searchForm" method="GET" data-hitsoft-target="#addrbk_organization_details_content" action="@Url.Action("Index",new { orgName=ViewBag.orgName,organizationId=ViewBag.organizationId})" class="form-search">
+@if(ViewBag.resultCount > 0) 
+{
+    if (ViewBag.resultCount == 1)
+    {
+        <div class="alert alert-info">1 record found</div>
+    }
+    else
+    {
+        <div class="alert alert-info">@ViewBag.resultCount records found</div>
+    }
+    <form id="addrbk_veteran_searchForm" method="GET" data-hitsoft-target="#addrbk_organization_details_content" action="@Url.Action("Index", new { orgName = ViewBag.orgName, organizationId = ViewBag.organizationId })" class="form-search">
         <input type="text" name="searchTerm" class="input-medium search-query" value="@ViewBag.searchTerm" placeholder="Enter search term"/>
         <input type="submit" value="Search" class="btn"/>
     </form>
 
     @Html.Partial("_Veteran", Model)
 }
-else {
+else
+{
     <div class="alert alert-error">@ViewBag.NoRecordFoundMsg</div>
 }
