--- a/HITSW/HITSW/Views/AddrBkIdentification/_EditIndv.cshtml
+++ b/HITSW/HITSW/Views/AddrBkIdentification/_EditIndv.cshtml
@@ -88,7 +88,7 @@
         </tr>
 
         <tr>
-            <td>Issuer</td>
+            <td>Issuer *</td>
             <td>
                 @Html.DropDownList("IdentificationIssuerID", String.Empty)
                 @Html.ValidationMessageFor(model => model.IdentificationIssuerID)
