--- a/HITSW/HITSW/Views/AddrBkIdentification/_EditOrg.cshtml
+++ b/HITSW/HITSW/Views/AddrBkIdentification/_EditOrg.cshtml
@@ -67,7 +67,7 @@
         </tr>
 
         <tr>
-            <td>Issuer</td>
+            <td>Issuer *</td>
             <td>
                 @Html.DropDownList("IdentificationIssuerID", String.Empty)
                 @Html.ValidationMessageFor(model => model.IdentificationIssuerID)
