--- a/HITSW/HITSW/Views/AddrBkOrganizationUnit/Edit.cshtml
+++ b/HITSW/HITSW/Views/AddrBkOrganizationUnit/Edit.cshtml
@@ -31,6 +31,7 @@
     @Html.HiddenFor(model => model.LastUpdatedFrom)
     @Html.HiddenFor(model => model.IsProspect)
     @Html.HiddenFor(model => model.LastUpdatedBy)
+    @Html.HiddenFor(model => model.ContactBasis_LCID)
 
 
     <table class="table table-striped">
