--- a/HITSW/HITSW/Views/AddrBkRelation/_EditOrg.cshtml
+++ b/HITSW/HITSW/Views/AddrBkRelation/_EditOrg.cshtml
@@ -33,25 +33,29 @@
     @Html.HiddenFor(model => model.CreatedDt)
     @Html.HiddenFor(model => model.LastUpdatedFrom)
     @Html.HiddenFor(model => model.LastUpdatedBy)
-    @Html.HiddenFor(model => model.PrimaryOrgID)
+    @Html.HiddenFor(model => model.PrimaryExtOrgID)
     @Html.HiddenFor(model => model.PrimaryIndivID)
     @Html.HiddenFor(model => model.RelatedIndivID)
+    @Html.HiddenFor(model => model.RelnToPrimaryIndiv_LCID)
     @Html.HiddenFor(model => model.ContactBasis_LCID)
+    @Html.HiddenFor(model => model.PrimaryExtOrgID1)
+    @Html.HiddenFor(model => model.RelatedIntOrgID1)
+    @Html.HiddenFor(model => model.RelnToExtToIntOrg_LCID)
 
     <table class="table table-striped">
         <tr>
             <td>Organization</td>
             <td>
-                @Html.DropDownList("RelatedOrgID", String.Empty)
-                @Html.ValidationMessageFor(model => model.RelatedOrgID)
+                @Html.DropDownList("RelatedExtOrgID", String.Empty)
+                @Html.ValidationMessageFor(model => model.RelatedExtOrgID)
             </td>
         </tr>
 
         <tr>
             <td>Relation Type</td>
             <td>
-                @Html.DropDownList("RelnToPrimaryOrg_LCID", String.Empty)
-                @Html.ValidationMessageFor(model => model.RelnToPrimaryOrg_LCID)
+                @Html.DropDownList("RelnToPrimaryExtOrg_LCID", String.Empty)
+                @Html.ValidationMessageFor(model => model.RelnToPrimaryExtOrg_LCID)
             </td>
         </tr>
 
