--- a/HITSW/HITSW/Views/Shared/_Layout.cshtml
+++ b/HITSW/HITSW/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                           <li class="dropdown">
                             <a class="dropdown-toggle" id="dLabel" role="button" data-toggle="dropdown" data-target="#" href="/page.html">Address Book<b class="caret"></b></a>
                             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                                <li>@Html.ActionLink("Organization", "Index", "AddrBkOrganizationUnit", new { isExternalOrganiation = true }, new { })</li>
+                                <li>@Html.ActionLink("Organization", "Index", "AddrBkOrganizationUnit")</li>
                                 <li>@Html.ActionLink("Person", "Index", "AddrBkPerson")</li>
                                 <li>@Html.ActionLink("Geographical Group", "Index", "AddrBkGeographicalGroup")</li>
                             </ul>
