Make lookup filter names generalized

--- a/HITSW/HITSW/Views/AddrBkPerson/Edit.cshtml
+++ b/HITSW/HITSW/Views/AddrBkPerson/Edit.cshtml
@@ -73,8 +73,8 @@
         <tr>
             <td>Suffix</td>
             <td>
-               @Html.DropDownList("SuffixLCID", String.Empty)
-                @Html.ValidationMessageFor(model => model.Suffix_LCID)
+               @Html.DropDownList("Suffix_LCID", String.Empty)
+               @Html.ValidationMessageFor(model => model.Suffix_LCID)
             </td>
         </tr>
 
