--- a/HITSW/HITSW/Views/AddrBkPerson/Create.cshtml
+++ b/HITSW/HITSW/Views/AddrBkPerson/Create.cshtml
@@ -62,8 +62,8 @@
         <tr>
             <td>Suffix</td>
             <td>
-               @Html.DropDownList("SuffixLCID", String.Empty)
-                @Html.ValidationMessageFor(model => model.Suffix_LCID)
+               @Html.DropDownList("Suffix_LCID", String.Empty)
+               @Html.ValidationMessageFor(model => model.Suffix_LCID)
             </td>
         </tr>
 
